--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <div class="grid">
       <div class="img">
         <h2>
-          Group Fans<br />
+          Forum Fans<br />
           iron man indonesia
         </h2>
       </div>
