--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       }
       body {
         font-family: "Poppins", sans-serif;
+        min-height: 100vh;
         background-color: rgb(255, 30, 30);
       }
 
       .grid {
-        height: 500px;
-        margin: 50px auto;
+        height: 600px;
         overflow: hidden;
-        width: 800px;
+        width: 1000px;
         border-radius: 5px;
         box-shadow: 1px 1px 5px black;
         background-color: #fff;
@@ -52,9 +52,10 @@
         z-index: 3;
         color: white;
         text-shadow: 1px 1px 2px black;
-        width: 280px;
-        margin: 200px auto;
-        font-size: 28px;
+        width: 350px;
+        margin: auto;
+        margin-top: 300px;
+        font-size: 32px;
       }
       form {
         background-color: rgb(255, 255, 255);
@@ -122,14 +123,22 @@
         color: rgb(255, 30, 30);
         cursor: pointer;
       }
+      @media (min-width: 769px) {
+        body {
+          min-height: 100vh;
+          display: grid;
+          justify-content: center;
+          align-content: center;
+        }
+      }
       @media (max-width: 768px) {
         .grid {
           width: 90% !important;
+          margin: auto;
         }
       }
       @media (max-width: 576px) {
         .grid {
-          width: 90% !important;
           margin-top: 50px;
           margin-bottom: 50px;
           display: block;
