--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
         width: 80%;
         margin: 15px auto;
       }
+
       input,
       label {
         display: block;
+
         width: 100%;
       }
       input {
@@ -146,11 +148,13 @@
           box-shadow: none;
         }
         .grid .img {
-          margin-top: -200px;
+          margin-top: -300px;
           width: 100%;
           height: 400px;
         }
         .grid .img h2 {
+          font-size: 28px;
+          width: 90%;
           top: 200px;
         }
         form {
